--- a/ASPFinal/ASPFinal/Views/Account/Login.cshtml
+++ b/ASPFinal/ASPFinal/Views/Account/Login.cshtml
@@ -62,7 +62,8 @@
 <!-- JS -->
 <script src="~/Public/LogandReg/vendor/jquery/jquery.min.js"></script>
 <script src="~/Public/LogandReg/js/main.js"></script>
-
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
 
 @section scripts{
     @Scripts.Render("~/bundles/jqueryval")
