--- a/ASPFinal/ASPFinal/Views/Account/Register.cshtml
+++ b/ASPFinal/ASPFinal/Views/Account/Register.cshtml
@@ -54,6 +54,8 @@
 </div>
 
 <!-- JS -->
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
 <script src="~/Public/LogandReg/vendor/jquery/jquery.min.js"></script>
 <script src="~/Public/LogandReg/js/main.js"></script>
 
